# CodingTask

./: .coverage  .gitignore  README.md  coverage.xml  requirements-dev.txt  requirements.txt  test_batch_processing.py  test_transformations.py  test_workflow_locally.py
.github/workflows/: main.yml
app/: animal_api.py
config/: default.env
etl_client/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
etl_client/src/animal_etl_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
etl_client/src/etl_client/: __init__.py  batch_processor.py  cli.py  config.py  http_client.py  models.py  pagination.py  pipeline.py  transformer.py
tests/: conftest.py  test_cli.py  test_models.py  test_transformer.py
